add no_blur mixin

--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -6,6 +6,7 @@
 @import 'mixins/box_sizing';
 @import 'mixins/clearfix';
 @import 'mixins/columns';
+@import 'mixins/image_rendering';
 @import 'mixins/filter';
 @import 'mixins/flex';
 @import 'mixins/font_size';
