--- a/src/apps_common/footer/templates/footer/footer.html
+++ b/src/apps_common/footer/templates/footer/footer.html
@@ -8,7 +8,7 @@
 
     <div class="dl-logo">
       <a href="http://directlinedev.com/" target="_blank" title="Web Development Company Philadelphia">
-        <img src="{% static 'img/dl_logo.png' %}" alt="Web Development Company Philadelphia">
+        <img src="{% static 'img/dl_logo.png' %}" alt="Web Development Company Philadelphia" width="99">
       </a>
     </div>
   </div>
