--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -3,6 +3,7 @@
 {% load attachable_blocks %}
 {% load pipeline_plus %}
 {% load staticfiles %}
+{% load form_helper %}
 
 {% block static_head %}
   {{ block.super }}
@@ -82,6 +83,16 @@
         {% endfor %}
       </div>
 
+    </div>
+  </div>
+
+  <div id="subscribe">
+    <div class="grid-block">
+      <form action="" method="post">
+        {% render_form subscribe_form %}
+
+        <input type="submit" value="Subscribe" class="btn">
+      </form>
     </div>
   </div>
 
