--- a/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
@@ -33,14 +33,14 @@
 
   .micro-font {
     font-family: Arial, sans-serif;
-    font-size: 12px;
+    font-size: 75%;
     line-height: 170%;
   }
 
   .content {
     padding: 25px 40px 25px 40px;
     font-family: Arial, sans-serif;
-    font-size: 14px;
+    font-size: 87.5%;
     line-height: 170%;
   }
 
@@ -74,7 +74,7 @@
 
     td[class="content"] {
       padding: 30px 20px !important;
-      font-size: 16px !important;
+      font-size: 100% !important;
     }
 
     td[class="footer"] {
@@ -91,7 +91,7 @@
     }
 
     td[class="footer"] p {
-      font-size: 13px !important;
+      font-size: 87.5% !important;
     }
   }
 </style>
@@ -152,7 +152,7 @@
             <table align="left" width="260" cellpadding="0" cellspacing="0" border="0" class="footer-side">
               <tr>
                 <td align="left" width="260" class="footer-side">
-                  <p style="margin:0 0 5px 0; padding:0; font-size:14px; color:#FFFFFF;" class="micro-font">
+                  <p style="margin:0 0 5px 0; padding:0; font-size:87.5%; color:#FFFFFF;" class="micro-font">
                     {{ config.company }}
                   </p>
 
