--- a/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
@@ -32,14 +32,14 @@
   }
 
   .micro-font {
-    font-family: Arial, sans-serif;
+    font-family: Verdana, Georgia, Arial, sans-serif;
     font-size: 75%;
     line-height: 170%;
   }
 
   .content {
     padding: 25px 40px 25px 40px;
-    font-family: Arial, sans-serif;
+    font-family: Verdana, Georgia, Arial, sans-serif;
     font-size: 87.5%;
     line-height: 170%;
   }
@@ -149,9 +149,9 @@
           <td width="540" class="footer">
 
             <!-- Левая часть -->
-            <table align="left" width="260" cellpadding="0" cellspacing="0" border="0" class="footer-side">
+            <table align="left" width="240" cellpadding="0" cellspacing="0" border="0" class="footer-side">
               <tr>
-                <td align="left" width="260" class="footer-side">
+                <td align="left" width="240" class="footer-side">
                   <p style="margin:0 0 5px 0; padding:0; font-size:87.5%; color:#FFFFFF;" class="micro-font">
                     {{ config.company }}
                   </p>
@@ -172,9 +172,9 @@
             </table>
 
             <!-- Правая часть -->
-            <table align="right" width="260" cellpadding="0" cellspacing="0" border="0" class="footer-side">
+            <table align="right" width="280" cellpadding="0" cellspacing="0" border="0" class="footer-side">
               <tr>
-                <td align="right" width="260" class="footer-side">
+                <td align="right" width="280" class="footer-side">
                   <p style="margin:0 0 5px 0; padding:0; color:#FFFFFF;" class="micro-font">
                     {% blocktrans with company=config.company %}
                       You received this email because you are
