--- a/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
@@ -58,14 +58,14 @@
 
   .micro-font {
     font-family: Verdana, Georgia, Arial, sans-serif;
-    font-size: 75%;
+    font-size: 0.75em;
     line-height: 170%;
   }
 
   .content {
     padding: 25px 40px 25px 40px;
     font-family: Verdana, Georgia, Arial, sans-serif;
-    font-size: 87.5%;
+    font-size: 0.875em;
     line-height: 170%;
   }
 
@@ -80,6 +80,12 @@
 
   .footer {
     padding: 25px 40px 25px 40px;
+  }
+
+  @media only screen and (max-width: 480px) {
+    body {
+      font-size: 16px !important;
+    }
   }
 
   @media only screen and (max-width: 680px) {
@@ -99,7 +105,7 @@
 
     td[class="content"] {
       padding: 30px 20px !important;
-      font-size: 100% !important;
+      font-size: 1em !important;
     }
 
     td[class="footer"] {
@@ -116,7 +122,7 @@
     }
 
     td[class="footer"] p {
-      font-size: 87.5% !important;
+      font-size: 0.875em !important;
     }
   }
 </style>
@@ -176,7 +182,7 @@
             <table align="left" width="240" cellpadding="0" cellspacing="0" border="0" class="footer-side">
               <tr>
                 <td align="left" width="240" class="footer-side">
-                  <p style="margin:0 0 5px 0; padding:0; font-size:87.5%; color:#FFFFFF;" class="micro-font">
+                  <p style="margin:0 0 5px 0; padding:0; font-size:0.875em; color:#FFFFFF;" class="micro-font">
                     {{ config.company }}
                   </p>
 
