--- a/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
@@ -138,7 +138,7 @@
       <!-- Ссылка на полную версию -->
       <table align="center" width="640" cellspacing="0" cellpadding="0" border="0" class="preheader">
         <tr>
-          <td align="left" width="420" style="padding:15px 0; color:#FFFFFF" class="micro-font">
+          <td align="left" width="420" style="padding:15px 0; color:#FFFFFF; line-height:120%;" class="micro-font">
             {{ campaign.preheader }}
           </td>
           <td style="width: 20px"></td>
