--- a/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
@@ -52,6 +52,14 @@
     border-collapse: collapse;
   }
 
+  h1 {
+    line-height: 1.2;
+  }
+
+  h2, h3 {
+    line-height: 1.3;
+  }
+
   a {
     word-break: break-word;
   }
