--- a/src/static/scss/section_slider.scss
+++ b/src/static/scss/section_slider.scss
@@ -56,6 +56,7 @@
     position: absolute;
     min-width: 100%;
     min-height: 100%;
+    max-width: none;
     top: 50%;
     left: 50%;
     @include transform(translate(-50%, -50%));
