--- a/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
@@ -1,261 +1,157 @@
+{% extends 'mailerlite/layout.html' %}
+
 {% load i18n %}
 
-<!DOCTYPE html>
-<html lang="en" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
-<!--xmlns  fix Outlook Scaling-->
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta name="format-detection" content="telephone=no">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-  <!--Fix Outlook Scaling-->
-  <!--[if gte mso 9]><xml>
-  <o:OfficeDocumentSettings>
-  <o:AllowPNG/>
-  <o:PixelsPerInch>96</o:PixelsPerInch>
-  </o:OfficeDocumentSettings>
-  </xml><![endif]-->
-
-  <title>{{ config.company }}</title>
-</head>
-<body>
-
-<style>
-  body {
-    margin: 0;
-    padding: 0;
-  }
-
-  .ExternalClass * {
-    line-height: 100%;
-  }
-
-  body, table, td, p, a, li {
-    -webkit-text-size-adjust: 100%;
-    -ms-text-size-adjust: 100%;
-  }
-
-  table {
-    border-spacing: 0;
-    border-collapse: collapse;
-    mso-table-lspace: 0pt;
-    mso-table-rspace: 0pt;
-  }
-
-  table, td {
-    mso-table-lspace: 0pt;
-    mso-table-rspace: 0pt;
-  }
-
-  table td {
-    border-collapse: collapse;
-  }
-
-  h1 {
-    line-height: 1.2;
-  }
-
-  h2, h3 {
-    line-height: 1.3;
-  }
-
-  a {
-    word-break: break-word;
-  }
-
-  .micro-font {
-    font-family: Verdana, Georgia, Arial, sans-serif;
-    font-size: 0.75em;
-    line-height: 170%;
-  }
-
-  .content {
-    padding: 25px 40px 25px 40px;
-    font-family: Verdana, Georgia, Arial, sans-serif;
-    font-size: 0.875em;
-    line-height: 170%;
-  }
-
-  .content a {
-    color: #3A66A5;
-  }
-
-  .content img {
-    max-width: 100%;
-    height: auto;
-  }
-
-  .footer {
-    padding: 25px 40px 25px 40px;
-  }
-
-  @media only screen and (max-width: 480px) {
-    body {
-      font-size: 16px !important;
-    }
-  }
-
-  @media only screen and (max-width: 680px) {
-    table[class="main"], td[class="main"] {
-      width: 100% !important;
-      min-width: 200px !important;
+{# Пользовательские стили #}
+{% block extra_styles %}
+  <style>
+    .preheader {
+      color: #BCD3F1;
+      font-size: 14px;
+      font-family: Tahoma, Arial, sans-serif;
     }
 
-    table[class="preheader"] {
-      display: none !important;
+    .backlink {
+      color: #FFFFFF;
+      font-size: 14px;
+      vertical-align: bottom;
+      font-family: Tahoma, Arial, sans-serif;
     }
 
-    td[class="header-img"] img {
-      width: 100% !important;
-      height: auto !important;
+    .content {
+      padding: 40px 60px;
+      font-family: Verdana, Arial, sans-serif;
+      line-height: 160%;
     }
 
-    td[class="content"] {
-      padding: 30px 20px !important;
-      font-size: 1em !important;
+    .content h1 {
+      color: #5E92DD;
+      font-size: 36px;
+      text-transform: uppercase;
     }
 
-    td[class="footer"] {
-      padding: 30px 20px !important;
+    .content a {
+      color: #3A66A5;
     }
 
-    table[class="footer-side"] {
-      width: 100% !important;
-      float: none !important;
+    .content img {
+      max-width: 100%;
+      height: auto;
     }
 
-    td[class="footer-side"] {
-      text-align: center !important;
+    .footer {
+      padding: 25px 40px 25px 40px;
     }
 
-    td[class="footer"] p {
-      font-size: 0.875em !important;
+    @media only screen and (max-width: 680px) {
+      td[class="header-img"] img {
+        width: 100% !important;
+        height: auto !important;
+      }
+
+      td[class="content"] {
+        padding: 30px 20px !important;
+        font-size: 1em !important;
+      }
+
+      td[class="footer"] {
+        padding: 30px 20px !important;
+      }
+
+      table[class="footer-side"] {
+        width: 100% !important;
+        float: none !important;
+      }
+
+      td[class="footer-side"] {
+        text-align: center !important;
+      }
+
+      td[class="footer"] p {
+        font-size: 0.875em !important;
+      }
     }
-  }
-</style>
+  </style>
+{% endblock extra_styles %}
 
-<table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="{{ config.bg_color }}"
-       {% if config.bg_image %}
-       style="background-image: url({{ config.bg_image.url }});"
-       {% endif %}>
-  <tbody>
-  <tr>
-    <td align="center" class="main">
 
-      <!-- Ссылка на полную версию -->
-      <table align="center" width="640" cellspacing="0" cellpadding="0" border="0" class="preheader">
-        <tr>
-          <td align="left" width="420" style="padding:15px 0; color:#FFFFFF; line-height:120%;" class="micro-font">
-            {{ campaign.preheader }}
-          </td>
-          <td style="width: 20px"></td>
-          <td align="right" width="200" style="padding:15px 0; color:#FFFFFF" class="micro-font">
-            {% trans "Can't see images?" %}
-            <a style="color:#FFFFFF" href="{$url}" target="_blank">{% trans "Click here..." %}</a>
-          </td>
-        </tr>
-      </table>
+{% block content %}
 
-      <!-- Картинка в заголовке -->
-      {% if campaign.header_image %}
-        <table align="center" width="640" cellpadding="0" cellspacing="0" border="0" class="main">
+  <!-- Картинка в заголовке -->
+  {% if campaign.header_image %}
+    <table align="center" width="640" cellpadding="0" cellspacing="0" border="0" class="main">
+      <tr>
+        <td align="center" class="header-img">
+          <img border="0" width="{{ campaign.header_image.normal.target_width }}"
+               height="{{ campaign.header_image.normal.target_height }}" alt=""
+               style="display:block;" src="{{ campaign.header_image.normal.url }}">
+        </td>
+      </tr>
+    </table>
+  {% endif %}
+
+  <!-- Контент -->
+  <table align="center" width="640" cellpadding="0" cellspacing="0" border="0"
+         style="background: #FFFFFF" class="main">
+    <tr>
+      <td class="content">
+        {{ campaign.text|safe }}
+      </td>
+    </tr>
+  </table>
+
+  <!-- Подвал -->
+  <table align="center" width="640" cellpadding="0" cellspacing="0" border="0"
+         style="background:#000000;" class="main">
+    <tr>
+      <td width="540" class="footer">
+
+        <!-- Левая часть -->
+        <table align="left" width="240" cellpadding="0" cellspacing="0" border="0" class="footer-side">
           <tr>
-            <td align="center" class="header-img">
-              <img border="0" width="{{ campaign.header_image.normal.target_width }}"
-                   height="{{ campaign.header_image.normal.target_height }}" alt=""
-                   style="display:block;" src="{{ campaign.header_image.normal.url }}">
+            <td align="left" width="240" class="footer-side">
+              <p style="margin:0 0 5px 0; padding:0; font-size:0.875em; color:#FFFFFF;" class="micro-font">
+                {{ config.company }}
+              </p>
+
+              <p style="margin:0 0 5px 0; padding:0;" class="micro-font">
+                <a href="mailto:{{ config.contact_email }}" style="color:#FFFFFF; text-decoration:none">
+                  {{ config.contact_email }}
+                </a>
+              </p>
+
+              <p style="margin:0 0 5px 0; padding:0;" class="micro-font">
+                <a href="http://{{ config.website }}/" target="_blank" style="color:#FFFFFF;">
+                  {{ config.website }}
+                </a>
+              </p>
             </td>
           </tr>
         </table>
-      {% endif %}
 
-      <!-- Контент -->
-      <table align="center" width="640" cellpadding="0" cellspacing="0" border="0"
-             style="background: #FFFFFF" class="main">
-        <tr>
-          <td class="content">
-            {{ campaign.text|safe }}
-          </td>
-        </tr>
-      </table>
+        <!-- Правая часть -->
+        <table align="right" width="280" cellpadding="0" cellspacing="0" border="0" class="footer-side">
+          <tr>
+            <td align="right" width="280" class="footer-side">
+              <p style="margin:0 0 5px 0; padding:0; color:#FFFFFF;" class="micro-font">
+                {% blocktrans with company=config.company %}
+                  You received this email because you are
+                  subscribed to the {{ company }} mailing list.
+                {% endblocktrans %}
+              </p>
 
-      <!-- Подвал -->
-      <table align="center" width="640" cellpadding="0" cellspacing="0" border="0"
-             style="background:#000000;" class="main">
-        <tr>
-          <td width="540" class="footer">
+              <p style="margin:0 0 5px 0; padding:0;" class="micro-font">
+                <strong>
+                  <a href="{$unsubscribe}" target="_blank" style="color:#FFFFFF;">
+                    {% trans 'Unsubscribe' %}
+                  </a>
+                </strong>
+              </p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
 
-            <!-- Левая часть -->
-            <table align="left" width="240" cellpadding="0" cellspacing="0" border="0" class="footer-side">
-              <tr>
-                <td align="left" width="240" class="footer-side">
-                  <p style="margin:0 0 5px 0; padding:0; font-size:0.875em; color:#FFFFFF;" class="micro-font">
-                    {{ config.company }}
-                  </p>
-
-                  <p style="margin:0 0 5px 0; padding:0;" class="micro-font">
-                    <a href="mailto:{{ config.contact_email }}" style="color:#FFFFFF; text-decoration:none">
-                      {{ config.contact_email }}
-                    </a>
-                  </p>
-
-                  <p style="margin:0 0 5px 0; padding:0;" class="micro-font">
-                    <a href="http://{{ config.website }}" target="_blank" style="color:#FFFFFF;">
-                      {{ config.website }}
-                    </a>
-                  </p>
-                </td>
-              </tr>
-            </table>
-
-            <!-- Правая часть -->
-            <table align="right" width="280" cellpadding="0" cellspacing="0" border="0" class="footer-side">
-              <tr>
-                <td align="right" width="280" class="footer-side">
-                  <p style="margin:0 0 5px 0; padding:0; color:#FFFFFF;" class="micro-font">
-                    {% blocktrans with company=config.company %}
-                      You received this email because you are
-                      subscribed to the {{ company }} mailing list.
-                    {% endblocktrans %}
-                  </p>
-
-                  <p style="margin:0 0 5px 0; padding:0;" class="micro-font">
-                    <strong>
-                      <a href="{$unsubscribe}" target="_blank" style="color:#FFFFFF;">
-                        {% trans 'Unsubscribe' %}
-                      </a>
-                    </strong>
-                  </p>
-                </td>
-              </tr>
-            </table>
-
-          </td>
-        </tr>
-      </table>
-
-      <table align="center" width="640" cellspacing="0" cellpadding="0" border="0" class="main">
-        <tr>
-          <td class="main" width="640" height="30"></td>
-        </tr>
-
-        <tr>
-          <td align="center">
-            <a style="display: inline-block; margin: 0 0; border: none;" href="https://www.mailerlite.com">
-              <img border="0" alt="MailerLite" src="https://static1.mailerlite.com/images/builder/powered-by-mailerlite.png">
-            </a>
-          </td>
-        </tr>
-
-        <tr>
-          <td class="main" width="640" height="30"></td>
-        </tr>
-      </table>
-
-    </td>
-  </tr>
-  </tbody>
-</table>
-</body>
-</html>
+{% endblock content %}
