--- a/src/apps_common/mailerlite/static/mailerlite/scss/standart.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/standart.scss
@@ -1,27 +1,40 @@
 @import "mixins";
 
-$blue: #5E92DD;
+$blue: #5e92dd;
 $text: #333333;
 
 h1, h2, h3, li:before {
   color: $blue;
 }
 
-.preheader {
-  color: #BCD3F1;
-  font-size: 0.875em;
-  line-height: 1.2;
-}
+/* Шапка */
+table[class="header"] {
+  @media only screen and (max-width: 680px) {
+    display: none;
+  }
 
-.backlink {
-  color: #FFFFFF;
-  font-size: 0.875em;
+  td {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    vertical-align: bottom;
+  }
+
+  .preheader {
+    color: #bcd3f1;
+    font-size: 0.875em;
+    line-height: 1.2;
+  }
+
+  .backlink {
+    color: #ffffff;
+    font-size: 0.875em;
+  }
 }
 
 /* Content */
 td[class="content"] {
   padding: 40px 60px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   @media only screen and (max-width: 680px) {
     padding: 30px 20px !important;
     font-size: 14px !important;
