--- a/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
@@ -1,6 +1,7 @@
 {% extends 'mailerlite/layout.html' %}
 
 {% load pipeline_plus %}
+{% load staticfiles %}
 {% load i18n %}
 
 
@@ -11,6 +12,31 @@
 
 
 {% block content %}
+
+  <!-- шапка письма -->
+  <table align="center" width="640" cellspacing="0" cellpadding="0" border="0" class="header">
+    <tr>
+      <td align="left" width="120" class="logo">
+        <a href="http://{{ config.website }}/" target="_blank">
+          <img src="{% static 'mailerlite/img/mail_logo.png' %}" alt="" border="0" width="110" height="32">
+        </a>
+      </td>
+
+      <td style="width: 20px"></td>
+
+      <td align="left" width="280" class="preheader">
+        {{ config.preheader|linebreaksbr }}
+      </td>
+
+      <td style="width: 20px"></td>
+
+      <td align="right" width="200" class="backlink">
+        {% trans "Can't see images?" %}
+        <a style="color:#FFFFFF" href="{$url}" target="_blank">{% trans "Click here..." %}</a>
+      </td>
+    </tr>
+  </table>
+
 
   <!-- Картинка в заголовке -->
   {% if campaign.header_image %}
@@ -58,9 +84,6 @@
         <table align="right" width="240" cellpadding="0" cellspacing="0" border="0" class="responsive">
           <tr>
             <td align="right" class="column socials">
-              {% if config.facebook %}
-                <a href="{{ config.facebook }}" class="facebook" target="_blank"></a>
-              {% endif %}
               <a href="mailto:{{ config.contact_email }}" class="mail" target="_blank"></a>
             </td>
           </tr>
