--- a/src/apps_common/mailerlite/templates/mailerlite/layout.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/layout.html
@@ -30,7 +30,7 @@
          style="background-image: url({{ config.bg_image.url }});"
       {% endif %}>
     <tr>
-      <td align="center" class="base-column">
+      <td align="center" height="100%" class="base-column">
 
         <!-- контент -->
         {% block content %}{% endblock content %}
