--- a/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
@@ -16,6 +16,8 @@ body, table, td, p, a, li {
 }
 
 table {
+  margin: 0;
+  padding: 0;
   border-spacing: 0;
   border-collapse: collapse;
   mso-table-lspace: 0;
