--- a/src/apps_common/mailerlite/static/mailerlite/scss/standart.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/standart.scss
@@ -81,7 +81,7 @@ td[class="footer"] {
 .socials {
   vertical-align: middle;
   @media only screen and (max-width: 680px) {
-    padding-top: 20px;
+    padding-top: 20px !important;
   }
 
   a {
