--- a/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
@@ -35,7 +35,7 @@ table td {
 
 h1, h2, h3, td, a, p, span, li {
   line-height: 1.6;
-  font-family: Tahoma, Arial, sans-serif;
+  font-family: Tahoma, Helvetica, Arial, sans-serif;
 }
 
 h1, h2, h3 {
