--- a/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
@@ -82,41 +82,15 @@ img {
 }
 
 ol {
-  padding-left: 0;
-  list-style: none;
-  counter-reset: my-counter;
-}
-
-ol li {
-  position: relative;
   padding-left: 1.4em;
-  z-index: 1;
-}
-
-ol li:before {
-  content: counter(my-counter) ". ";
-  counter-increment: my-counter;
-  position: absolute;
-  left: 0;
-  top: 0;
 }
 
 ul {
   padding-left: 1em;
-  list-style: none;
 }
 
-ul li {
-  position: relative;
-  z-index: 1;
-}
-
-ul li:before {
-  content: '●';
-  position: absolute;
-  left: -1.1em;
-  top: 0;
-  font-size: 0.8em;
+li {
+  padding: 0;
 }
 
 /* Главная таблица */
