--- a/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
+++ b/src/apps_common/mailerlite/templates/mailerlite/standart/html_version.html
@@ -73,9 +73,7 @@
             <td align="left" class="column">
               {{ config.footer_text|linebreaksbr }}
 
-              <a href="{$unsubscribe}" target="_blank" style="color: inherit">
-                {% trans 'Unsubscribe' %}
-              </a>
+              <a href="{$unsubscribe}" target="_blank">{% trans 'Unsubscribe' %}</a>
             </td>
           </tr>
         </table>
