--- a/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/layout.scss
@@ -78,7 +78,9 @@ img {
   display: block;
   max-width: 100%;
   width: auto;
-  height: auto;
+  @media screen {
+    height: auto;
+  }
 }
 
 ol {
