--- a/src/apps_common/mailerlite/static/mailerlite/scss/standart.scss
+++ b/src/apps_common/mailerlite/static/mailerlite/scss/standart.scss
@@ -1,5 +1,7 @@
 @import "mixins";
 
+$media_mobile: 680px;
+
 $blue: #5e92dd;
 $text: #333333;
 
@@ -7,91 +9,125 @@ h1, h2, h3 {
   color: $blue;
 }
 
-/* Шапка */
-table[class="header"] {
-  @media only screen and (max-width: 680px) {
-    display: none;
+body[yahoo] {
+  /* Шапка */
+  .header-table {
+    @include media_interval(0, $media_mobile) {
+      display: none;
+    }
+
+    td {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      vertical-align: bottom;
+    }
+
+    .logo {
+      width: 120px;
+    }
+
+    .preheader {
+      width: 280px;
+      color: #bcd3f1;
+      font-size: 0.875em;
+      line-height: 1.2;
+    }
+
+    .backlink {
+      width: 200px;
+      color: #ffffff;
+      font-size: 0.875em;
+    }
   }
 
-  td {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    vertical-align: bottom;
+  .header-img {
+    max-width: 640px;
   }
 
-  .preheader {
-    color: #bcd3f1;
-    font-size: 0.875em;
-    line-height: 1.2;
+  /* Content */
+  .content {
+    padding: 40px 40px;
+    max-width: 560px;
+    background-color: #ffffff;
+    @include media_interval(0, $media_mobile) {
+      padding: 30px 20px !important;
+      font-size: 14px !important;
+      max-width: 600px !important;
+    }
+
+    h1:first-child {
+      margin-top: 0;
+    }
+
+    a {
+      color: $blue;
+      text-decoration: none;
+    }
   }
 
-  .backlink {
-    color: #ffffff;
-    font-size: 0.875em;
-  }
-}
+  /* Footer */
+  .footer {
+    padding-top: 25px;
+    @include media_interval(0, $media_mobile) {
+      padding: 25px 20px 0 !important;
+    }
 
-/* Content */
-td[class="content"] {
-  padding: 40px 60px;
-  background-color: #ffffff;
-  @media only screen and (max-width: 680px) {
-    padding: 30px 20px !important;
-    font-size: 14px !important;
-  }
-
-  h1:first-child {
-    margin-top: 0;
-  }
-
-  a {
-    color: $blue;
-    text-decoration: none;
-  }
-}
-
-/* Footer */
-td[class="footer"] {
-  padding-top: 25px;
-  @media only screen and (max-width: 680px) {
-    padding: 25px 20px 0 !important;
-  }
-
-  .column {
-    color: $text;
-    font-size: 0.875em;
-    @media only screen and (max-width: 680px) {
-      text-align: center !important;
+    td {
+      color: $text;
+      font-size: 0.875em;
+      @include media_interval(0, $media_mobile) {
+        text-align: center !important;
+      }
     }
 
     a {
       color: $text;
     }
-  }
-}
 
-.socials {
-  vertical-align: middle;
-  @media only screen and (max-width: 680px) {
-    padding-top: 20px !important;
+    .left-table {
+      width: 400px;
+      @include media_interval(0, $media_mobile) {
+        width: 100%;
+      }
+    }
+
+    .right-table {
+      width: 240px;
+      @include media_interval(0, $media_mobile) {
+        width: 100%;
+      }
+    }
   }
 
-  a {
-    display: inline-block;
-    margin-left: 6px;
-    width: 30px;
-    height: 30px;
+  /* Соцкнопки */
+  .socials {
     vertical-align: middle;
-    background: url(../img/mail_icons.png) no-repeat 0 0;
-    @include no_fontsize;
-
-    &:first-child {
-      margin-left: 0;
+    @include media_interval(0, $media_mobile) {
+      padding-top: 20px !important;
     }
 
-    &.mail {
-      background-position: -60px 0;
+    a {
+      display: inline-block;
+      margin-left: 6px;
+      width: 30px;
+      height: 30px;
+      vertical-align: middle;
+      background: url(../img/mail_icons.png) no-repeat 0 0;
+      @include no_fontsize;
+
+      &:first-child {
+        margin-left: 0;
+      }
+
+      &.mail {
+        background-position: -60px 0;
+      }
     }
   }
 }
 
+@media screen and (max-device-width: 600px) {
+  *[class~=content] {
+    background-color: red !important;
+  }
+}
